# polygrids

./: Cargo.toml  LICENSE
examples/: gravity.rs  islandmap.rs
src/: geometry.rs  grid.rs  lib.rs  lookup.rs
src/onedimensional/: mod.rs
src/spherical/: faces.rs  geometry.rs  mod.rs  polyhedron.rs
src/threedimensional/: mod.rs
src/twodimensional/: cartesian.rs  mod.rs  spherical.rs
