[package]
name = "polygrids"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.34.1"
angle-sc = "1.1.4"
clap = { version = "4.5.60", features = ["derive"] }
rand = { version = "0.10.0", optional = true }

[features]
rand = ["dep:rand"]
default = ["rand"]

[[example]]
name = "gravity"
path = "examples/gravity.rs"
required-features = ["rand"]
